objects/vlocity_ins__DocumentClause__c.object
<CustomObject>
    <description>A clause is a paragraph of legal language or provision that is used to assemble a contract document.</description>
    <fields>
        <fullName>vlocity_ins__Category__c</fullName>
        <description>Clause Category</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Confidential</fullName>
                </value>
                <value>
                    <fullName>Definitions</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClauseContent__c</fullName>
        <description>Clause Content</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Clause Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractTypes__c</fullName>
        <description>Contract types that the clause is restricted to</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Types</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsArchived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is an archived clause</description>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this clause is restricted for editing at contract level</description>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LocaleCode__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_ins__VlocityLocaleCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Tokens__c</fullName>
        <description>Tokens inserted into this clause</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tokens</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Clause type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generic</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Clause</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>